Fix spacing for date ranges

--- a/media/gcapes-print.css
+++ b/media/gcapes-print.css
@@ -65,7 +65,7 @@ body {
 
 p {
 	position: relative;
-	left: 28%;
+	left: 29%;
 	margin-bottom: 0.2em;
 	margin-right: 0;
 	width: 70%;
@@ -81,13 +81,13 @@ code {
 
 p code {
 	position: absolute;
-	left: -11%;
+	left: -13%;
 }
 
 
 ul {
 	position: relative;
-	left: 28%;
+	left: 29%;
 	width: 65%;
 	margin-bottom: 1em;
 	/*margin-top: -0.5em;*/
@@ -125,7 +125,7 @@ h1 {
 	font-size: 3em;
 	line-height: 1em;
 	position: relative;
-	left: 28%;
+	left: 29%;
 }
 
 h1+p {
@@ -165,7 +165,7 @@ a:hover {
 #webaddress {
 	margin-top: 1em;
 	position: relative;
-	left: 28%;
+	left: 29%;
 	color: #ccc;
 	font-family: Menlo,monospace,sans-serif;
 	font-size: 80%;
